--- a/bedrock/firefox/templates/firefox/includes/download-button.html
+++ b/bedrock/firefox/templates/firefox/includes/download-button.html
@@ -15,14 +15,17 @@
 
 {% set download_class = 'download-button' %}
 {% set download_class = download_class ~ ' download-button-' ~ channel if channel else download_class %}
-{% set download_class = download_class ~ ' download-button-android' if not show_desktop else download_class %}
-{% set download_class = download_class ~ ' download-button-desktop' if not show_android else download_class %}
+
+{% set download_class = download_class ~ ' download-button-android' if not (show_desktop or show_ios) else download_class %}
+{% set download_class = download_class ~ ' download-button-desktop' if not (show_android or show_ios) else download_class %}
+{% set download_class = download_class ~ ' download-button-ios' if not (show_desktop or show_android) else download_class %}
+
 {% set download_class = download_class ~ ' download-button-small' if small else download_class %}
 {% set download_class = download_class ~ ' download-button-noicon' if not icon else download_class %}
 {% set download_class = download_class ~ ' download-button-simple' if simple else download_class %}
 {% set download_class = download_class ~ ' download-button-check-old-fx' if check_old_fx else download_class %}
 
-<div id="{{ id }}" class="{{ download_class }}">
+<div id="{{ id }}" class="{{ download_class }}{% if waffle.switch('firefox-ios-global') %} ios-active{% endif %}">
   {% if show_desktop %}
     <noscript>
       {{ alt_buttons(builds) }}
@@ -36,11 +39,11 @@
     <p class="linux-arm-download">
       {{ _('Please follow <a href="%(url)s">these instructions</a> to install Firefox.')|format(url='https://support.mozilla.org/kb/install-firefox-linux') }}
     </p>
-    {% if l10n_has_tag('ios_announce', 'firefox/new') %}
+    {% if l10n_has_tag('ios_announce', 'firefox/new') and not waffle.switch('firefox-ios-global') %}
       <p class="ios-download">
         {{_('Firefox is coming soon to iOS! <a href="{url}">Sign up to learn more</a>.').format(url=url('newsletter.ios'))|safe }}
       </p>
-    {% else %}
+    {% elif not waffle.switch('firefox-ios-global') %}
       <p class="ios-download">
         {{ _("Your system doesn't meet the <a href=\"%(url)s\">requirements</a> to run Firefox.")|format( url=firefox_url('desktop', 'sysreq', build)) }}
       </p>
@@ -99,6 +102,12 @@
       <a href="{{ url('firefox.android.all') }}">{{ _('Systems &amp; Languages') }}</a><br>
       {% endif %}
       <a href="{{ firefox_url('android', 'notes', channel) }}">{{ _('What’s New') }}</a> |
+      <a href="{{ url('privacy.notices.firefox') }}">{{ _('Privacy') }}</a>
+    </small>
+  {% endif %}
+  {% if show_ios and waffle.switch('firefox-ios-global') %}
+    <small class="download-other os_ios">
+      <a href="https://support.mozilla.org/kb/will-firefox-work-my-mobile-device">{{ _('Supported Devices') }}</a> |
       <a href="{{ url('privacy.notices.firefox') }}">{{ _('Privacy') }}</a>
     </small>
   {% endif %}
