--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -687,7 +687,8 @@ html[lang|="en"] {
         .secondary .download-link .download-subtitle {
             .font-size(18px);
         }
-        .secondary .os_android .download-link .download-subtitle {
+        .secondary .os_android .download-link .download-subtitle,
+        .secondary .os_ios .download-link .download-subtitle {
             .font-size(@baseFontSize);
         }
     }
