--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -107,6 +107,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 20px 0;
     border: 0;
     background: #565a5c;
+    color: #fff;
 
     header {
         position: relative;
@@ -189,7 +190,8 @@ h1, h2, h3, h4, h5, h6 {
             }
         }
 
-        .os_android .download-subtitle {
+        .os_android .download-subtitle,
+        .os_ios .download-subtitle {
             .font-size(@largeFontSize);
             margin-right: 0px;
             text-align: center;
