--- a/media/css/press/press.less
+++ b/media/css/press/press.less
@@ -88,6 +88,18 @@ fieldset {
     }
 }
 
+.press-inquiry {
+    margin-top: 20px;
+
+    .error-msg {
+        background-color: #aa1401;
+        color: #fff;
+        padding: 10px 15px;
+        border-radius: 4px;
+        width: 70%;
+    }
+}
+
 @media only screen and (max-width: @breakDesktop) {
     .main-column {
         float: none;
