--- a/bedrock/mozorg/templates/mozorg/contact/contact-landing.html
+++ b/bedrock/mozorg/templates/mozorg/contact/contact-landing.html
@@ -21,6 +21,7 @@
         <li><a href="https://wiki.mozilla.org/People:MozSpaces_Guidelines">{{ _('I want to hold an event in a Mozilla space')}}</a></li>
         <li><a href="https://bugzilla.mozilla.org/form.dev-engagement-event">{{ _('I want Mozilla to sponsor my event')}}</a></li>
         <li><a href="{{ url('styleguide.identity.mozilla-branding') }}">{{ _('I have a question about using Mozilla logos')}}</a></li>
+        <li><a href="{{ url('press.press-inquiry') }}">{{ _('I’m a member of the Press and have a question for Mozilla') }}</a></li>
       </ul>
 
       <p>
