[fix bug 1212033] Create tracking protection animation

--- a/media/css/sandstone/animations.less
+++ b/media/css/sandstone/animations.less
@@ -71,3 +71,21 @@
         opacity: 1;
     }
 }
+
+@-webkit-keyframes sand-fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes sand-fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
