Fix Bug 1214112, updated background color of android tile

--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -1056,7 +1056,7 @@ html[lang|="en"] {
 /****************************************************************************/
 // Firefox Android
 .promo-large-portrait.firefox-android {
-    background: #00af84;
+    background: #00659a;
 
     h2 {
         padding: 110px @baseLine 0 @baseLine;
