Fix Bug 1214232, switch to default headline for /choose

--- a/bedrock/firefox/templates/firefox/choose.html
+++ b/bedrock/firefox/templates/firefox/choose.html
@@ -24,7 +24,7 @@
   </div>
   <h1>{{ high_res_img('firefox/choose/header-firefox.png', {'alt': 'Firefox', 'width': '223', 'height': '84'}) }}</h1>
 
-  <h2 data-tracking="{{ _('Browse Freely.<br> Choose Firefox.') }}" data-selling="{{ _('Take Control.<br> Choose Firefox.') }}">{{_('Stand for choice.<br> Choose Firefox.')}}</h2>
+  <h2 data-tracking="{{ _('Browse Freely.<br> Choose Firefox.') }}" data-choice="{{_('Stand for choice.<br> Choose Firefox.')}}">{{ _('Take Control.<br> Choose Firefox.') }}</h2>
   {{ download_firefox(simple=true) }}
 </div>
 {% endblock alt_header %}
