Fix Bug 1214022, additions to the mozilla trademark list

--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -20,8 +20,8 @@
 }
 
 #main-content {
-  div.img-right, 
-  div.img-center, 
+  div.img-right,
+  div.img-center,
   div.img-left {
     font-style: italic;
     text-align: center;
@@ -50,7 +50,7 @@
 }
 
 video,
-object, 
+object,
 img {
   max-width: 100%;
   height: auto;
@@ -118,7 +118,6 @@ img {
 }
 
 .trademarks {
-  table#marks,
   table#logos {
     width: 100%;
     margin-bottom: 3em;
@@ -129,15 +128,14 @@ img {
     td {
       width: 120px;
       text-align: center;
+      span {
+          .font-size(1.2rem);
+      }
     }
     th {
       text-align: left;
       font-weight: normal;
-    } 
-  }
-  
-  #other {
-    clear: both;
+    }
   }
 }
 
