--- a/bedrock/foundation/templates/foundation/trademarks/list.html
+++ b/bedrock/foundation/templates/foundation/trademarks/list.html
@@ -15,127 +15,113 @@
 {% block article %}
   <table id="logos">
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Firefox logo') }}®" src="{{ static('img/trademarks/firefox-logo-r.png') }}" /></td>
-      <th>{{ _('Firefox logo') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('Firefox logo') }}®" src="{{ static('img/trademarks/firefox-logo-r.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('Firefox logo') }}</th>
+    </tr>
+    <tr>
+      <td>
+        {{ high_res_img('trademarks/hello-logo-wordmark.png', { 'alt': _('Firefox Hello logo'), 'width': '100', 'height': '100' }) }}<span>&reg;</span>
+      </td>
+      <th>{{ _('Firefox Hello logo') }}</th>
     </tr>
     <tr>
       <td><img width="100" height="100" alt="{{ _('Firefox OS logo') }}" src="{{ static('img/trademarks/FirefoxOS_logo-wordmark.png') }}" /></td>
       <th>{{ _('Firefox OS logo') }}</th>
-      </tr>
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('Thunderbird logo') }}®" src="{{ static('img/trademarks/thunderbird_logo_100.png') }}" /></td>
-      <th>{{ _('Thunderbird logo') }}&reg;</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Mozilla logo') }}™" src="{{ static('img/trademarks/dino-head.png') }}" /></td>
-      <th>{{ _('Mozilla logo') }}&trade;</th>
+      <td><img width="100" height="100" alt="{{ _('Thunderbird logo') }}®" src="{{ static('img/trademarks/thunderbird_logo_100.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('Thunderbird logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Camino logo') }}®" src="{{ static('img/trademarks/camino-logo-r.png') }}" /></td>
-      <th>{{ _('Camino logo') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('Mozilla logo') }}™" src="{{ static('img/trademarks/dino-head.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Mozilla logo') }}</th>
     </tr>
     <tr>
-      <td id="communities"><img width="130" height="100" alt="{{ _('Mozilla Communities logo') }}™" src="{{ static('img/trademarks/community-logo.png') }}" /></td>
-      <th>{{ _('Mozilla Communities logo') }}&trade;<br /><small><a href="https://wiki.mozilla.org/MCS:Licensing_Guidelines">{{ _('See the separate licensing guidelines for this logo') }}</a></small></th>
+      <td>
+        {{ high_res_img('trademarks/logo-wordmark-webmaker.png', { 'alt': _('Webmaker logo'), 'width': '100', 'height': '100' }) }}<span>&reg;</span>
+      </td>
+      <th>{{ _('Webmaker logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('SUMO logo') }}™" src="{{ static('img/trademarks/sumo-logo.png') }}" /></td>
-      <th>{{ _('SUMO logo') }}&trade;</th>
+      <td>
+        {{ high_res_img('trademarks/lightbeam-logo.png', { 'alt': _('Lightbeam logo'), 'width': '100', 'height': '100' }) }}<span>&trade;</span>
+      </td>
+      <th>{{ _('Lightbeam logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('QMO logo') }}™" src="{{ static('img/trademarks/qmo-logo-tm.png') }}" /></td>
-      <th>{{ _('QMO logo') }}&trade;</th>
+      <td><img width="100" height="100" alt="{{ _('Camino logo') }}®" src="{{ static('img/trademarks/camino-logo-r.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('Camino logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('G-Fox logo') }}®" src="{{ static('img/trademarks/gfox-logo-r.png') }}" /></td>
-      <th>{{ _('G-Fox logo') }}&reg;</th>
+      <td id="communities"><img width="130" height="100" alt="{{ _('Mozilla Communities logo') }}™" src="{{ static('img/trademarks/community-logo.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Mozilla Communities logo') }}<br /><small><a href="https://wiki.mozilla.org/MCS:Licensing_Guidelines">{{ _('See the separate licensing guidelines for this logo') }}</a></small></th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Bugzilla logo') }}™" src="{{ static('img/trademarks/bugzilla-tm.png') }}" /></td>
-      <th>{{ _('Bugzilla logo') }}&trade;</th>
+      <td><img width="100" height="100" alt="{{ _('SUMO logo') }}™" src="{{ static('img/trademarks/sumo-logo.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('SUMO logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Sunbird logo') }}®" src="{{ static('img/trademarks/sunbird-logo-r.png') }}" /></td>
-      <th>{{ _('Sunbird logo') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('QMO logo') }}™" src="{{ static('img/trademarks/qmo-logo-tm.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('QMO logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('SeaMonkey logo') }}®" src="{{ static('img/trademarks/seamonkey-logo-r.png') }}" /></td>
-      <th>{{ _('SeaMonkey logo') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('G-Fox logo') }}®" src="{{ static('img/trademarks/gfox-logo-r.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('G-Fox logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Foxkeh logo') }}®" src="{{ static('img/trademarks/foxkeh-logo-r.png') }}" /></td>
-      <th>{% trans %}Foxkeh logo&reg;<br /><small>This trademark is licensed under the Creative Commons Attribution-Non-Commercial-NoDerivs 2.1 Japan.</small>{% endtrans %}</th>
+      <td><img width="100" height="100" alt="{{ _('Bugzilla logo') }}™" src="{{ static('img/trademarks/bugzilla-tm.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Bugzilla logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Creative Collective logo') }}™" src="{{ static('img/trademarks/creativecollective-logo.png') }}" /></td>
-      <th>{{ _('Creative Collective logo') }}&trade;</th>
+      <td><img width="100" height="100" alt="{{ _('Sunbird logo') }}®" src="{{ static('img/trademarks/sunbird-logo-r.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('Sunbird logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Campus Reps logo') }}™" src="{{ static('img/trademarks/campusreps-logo.png') }}" /></td>
-      <th>{{ _('Campus Reps logo') }}&trade;</th>
+      <td><img width="100" height="100" alt="{{ _('SeaMonkey logo') }}®" src="{{ static('img/trademarks/seamonkey-logo-r.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('SeaMonkey logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Rust logo') }}™" src="{{ static('img/trademarks/rust-logo.png') }}" /></td>
-      <th>{{ _('Rust logo') }}&trade;</th>
+      <td><img width="100" height="100" alt="{{ _('Foxkeh logo') }}®" src="{{ static('img/trademarks/foxkeh-logo-r.png') }}" /><span>&reg;</span></td>
+      <th>{{ _('Foxkeh logo') }}<br /><small>{{ _('This trademark is licensed under the Creative Commons Attribution-Non-Commercial-NoDerivs 2.1 Japan.') }}</small></th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Cargo logo') }}™" src="{{ static('img/trademarks/cargo-logo.png') }}" /></td>
-      <th>{{ _('Cargo logo') }}&trade;</th>
-    </tr>
-  </table>
-
-  <table id="marks">
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('Firefox') }}®" src="{{ static('img/trademarks/firefox_wordmark-only_RGB.png') }}" /></td>
-      <th>{{ _('Firefox') }}&reg;</th>
-    </tr>
-      <tr>
-        <td><img width="100" height="100" alt="{{ _('Firefox® OS') }}" src="{{ static('img/trademarks/firefox-os_wordmark-only_RGB.png') }}" /></td>
-        <th>{{ _('Firefox&reg; OS') }}</th>
-      </tr>
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('Thunderbird') }}®" src="{{ static('img/trademarks/thunderbird-r.png') }}" /></td>
-      <th>{{ _('Thunderbird') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('Creative Collective logo') }}™" src="{{ static('img/trademarks/creativecollective-logo.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Creative Collective logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Mozilla') }}®" src="{{ static('img/trademarks/mozilla-r.png') }}" /></td>
-
-      <th>{{ _('Mozilla') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('Campus Reps logo') }}™" src="{{ static('img/trademarks/campusreps-logo.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Campus Reps logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Camino') }}®" src="{{ static('img/trademarks/camino-r.png') }}" /></td>
-      <th>{{ _('Camino') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('Rust logo') }}™" src="{{ static('img/trademarks/rust-logo.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Rust logo') }}</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Mozilla Communities') }}™" src="{{ static('img/trademarks/community-wordmark.png') }}" /></td>
-
-      <th>{{ _('Mozilla Communities') }}&trade;</th>
-    </tr>
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('SUMO') }}™" src="{{ static('img/trademarks/sumo-tm.png') }}" /></td>
-      <th>{{ _('SUMO') }}&trade;</th>
-    </tr>
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('QMO') }}™" src="{{ static('img/trademarks/qmo-tm.png') }}" /></td>
-      <th>{{ _('QMO') }}&trade;</th>
-    </tr>
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('G-Fox') }}®" src="{{ static('img/trademarks/gfox-r.png') }}" /></td>
-      <th>{{ _('G-Fox') }}&reg;</th>
-    </tr>
-    <tr>
-      <td><img width="100" height="100" alt="{{ _('SeaMonkey') }}®" src="{{ static('img/trademarks/seamonkey-wordmark-r.png') }}" /></td>
-      <th>{{ _('SeaMonkey') }}&reg;</th>
+      <td><img width="100" height="100" alt="{{ _('Cargo logo') }}™" src="{{ static('img/trademarks/cargo-logo.png') }}" /><span>&trade;</span></td>
+      <th>{{ _('Cargo logo') }}</th>
     </tr>
   </table>
 
-  <p id="other">{{ _('Other registered trademarks:') }}</p>
+  <h2>{{ _('Wordmarks') }}</h2>
 
-  <ul>
+  <ul id="marks">
+    <li>{{ _('Firefox') }}&reg;</li>
+    <li>{{ _('Firefox&reg; OS') }}</li>
+    <li>{{ _('Mozilla&reg; Webmaker') }}</li>
+    <li>{{ _('Firefox&reg; Hello') }}</li>
+    <li>{{ _('Lightbeam') }}&trade;</li>
+    <li>{{ _('Rust') }}&trade;</li>
+    <li>{{ _('Cargo') }}&trade;</li>
+    <li>{{ _('Thunderbird') }}&reg;</li>
+    <li>{{ _('Mozilla') }}&reg;</li>
+    <li>{{ _('Camino') }}&reg;</li>
+    <li>{{ _('Mozilla Communities') }}&trade;</li>
+    <li>{{ _('SUMO') }}&trade;</li>
+    <li>{{ _('QMO') }}&trade;</li>
+    <li>{{ _('SeaMonkey') }}&reg;</li>
     <li>Bugzilla&trade;</li>
     <li>Firebug&reg;</li>
     <li>Foxkeh&trade;</li>
-    <li>mozilla.org&reg;</li>
     <li>Minimo&reg;</li>
     <li>Sunbird&reg;</li>
     <li>View Source&trade;</li>
