--- a/media/css/privacy/privacy-day.less
+++ b/media/css/privacy/privacy-day.less
@@ -882,6 +882,12 @@ html[dir='rtl'] {
         padding-right: 0;
     }
 
+    /* Workaround Bug 1196255 */
+    #main-content {
+        top: -37px;
+        clear: both;
+    }
+
     #page-header {
         width: 100%;
         padding-bottom: 0;
