Fix Bug 1205858, updated content for contact tab

--- a/bedrock/mozorg/templates/mozorg/contact/contact-landing.html
+++ b/bedrock/mozorg/templates/mozorg/contact/contact-landing.html
@@ -14,13 +14,14 @@
       </header>
 
       <ul>
-        <li><a href="https://support.mozilla.org/">{{ _('I’m having problems with using Firefox')}}</a></li>
-        <li><a href="https://sendto.mozilla.org/page/contribute/givenow-seq?preset=2&ref=Donation_Form&utm_campaign=Donation_Form&utm_source=mozilla.org&utm_medium=referral&utm_content=contact_us_page">{{ _('I want to donate to Mozilla')}}</a></li>
-        <li><a href="{{ url('foundation.trademarks.policy') }}">{{ _('I have questions about copyright trademarks and Mozilla')}}</a></li>
-        <li><a href="mailto:research_requests@mozilla.com">{{ _('I need information for an academic paper')}}</a></li>
-        <li><a href="https://wiki.mozilla.org/People:MozSpaces_Guidelines">{{ _('I want to hold an event in a Mozilla space')}}</a></li>
-        <li><a href="https://bugzilla.mozilla.org/form.dev-engagement-event">{{ _('I want Mozilla to sponsor my event')}}</a></li>
-        <li><a href="{{ url('styleguide.identity.mozilla-branding') }}">{{ _('I have a question about using Mozilla logos')}}</a></li>
+        <li><a href="https://support.mozilla.org/">{{ _('I’m having problems with using Firefox') }}</a></li>
+        <li><a href="https://sendto.mozilla.org/page/contribute/givenow-seq?preset=2&amp;ref=Donation_Form&amp;utm_campaign=Donation_Form&amp;utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_content=contact_us_page">{{ _('I want to donate to Mozilla') }}</a></li>
+        <li><a href="{{ url('foundation.trademarks.policy') }}">{{ _('I have questions about using Mozilla’s trademarks') }}</a></li>
+        <li><a href="{{ url('legal.fraud-report') }}">{{ _('I’d like to report misuse of a Mozilla trademark') }}</a></li>
+        <li><a href="mailto:research_requests@mozilla.com">{{ _('I need information for an academic paper') }}</a></li>
+        <li><a href="https://wiki.mozilla.org/People:MozSpaces_Guidelines">{{ _('I want to hold an event in a Mozilla space') }}</a></li>
+        <li><a href="https://bugzilla.mozilla.org/form.dev-engagement-event">{{ _('I want Mozilla to sponsor my event') }}</a></li>
+        <li><a href="mailto:trademark-permissions@mozilla.com">{{ _('I’d like permission to use a Mozilla logo') }}</a></li>
         <li><a href="{{ url('press.press-inquiry') }}">{{ _('I’m a member of the Press and have a question for Mozilla') }}</a></li>
       </ul>
 
