--- a/media/css/firefox/developer.less
+++ b/media/css/firefox/developer.less
@@ -263,7 +263,7 @@
         .border-box();
         text-transform: uppercase;
     }
-    h3,
+    .form-title,
     .form-submit,
     .form-contents {
         width: auto;
@@ -309,7 +309,8 @@
         .span_narrow(5);
         padding-left: 0;
         padding-right: 0;
-        h3,
+
+        .form-title,
         .form-submit,
         .form-contents {
             width: auto;
@@ -358,7 +359,8 @@
         padding-left: 0;
         padding-right: 0;
         padding-top: 0;
-        h3,
+
+        .form-title,
         .form-submit,
         .form-contents {
             width: auto;
