--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -231,6 +231,7 @@ a.go {
         box-shadow: none;
         min-height: 0;
 
+        .form-title,
         .form-contents,
         .form-submit {
             width: auto;
@@ -239,8 +240,6 @@ a.go {
         }
 
         h3 {
-            width: auto;
-            float: none;
             .font-size(40px);
             color: #bee1f5;
             line-height: 1.2;
