--- a/media/css/firefox/whatsnew-fx37.less
+++ b/media/css/firefox/whatsnew-fx37.less
@@ -442,9 +442,7 @@ main[data-active="email-only"] {
         }
 
         #newsletter-form {
-            h3 {
-                float: right;
-            }
+            .form-title,
             .form-contents {
                 float: right;
             }
@@ -532,9 +530,7 @@ main[data-active="email-only"] {
         }
 
         #newsletter-form {
-            h3 {
-                float: none;
-            }
+            .form-title,
             .form-contents {
                 float: none;
             }
