--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -281,7 +281,7 @@
 }
 
 #newsletter-form {
-    h3 {
+    .form-title {
         .span(4);
         .offset(2);
     }
@@ -496,7 +496,7 @@ html[dir="rtl"] {
     }
 
     #newsletter-form {
-        h3 {
+        .form-title {
             .span_narrow(4);
             .offset_narrow(1);
         }
@@ -612,7 +612,7 @@ html[dir="rtl"] {
     }
 
     #newsletter-form {
-        h3,
+        .form-title,
         .form-contents,
         .form-submit {
             .span-all();
