--- a/media/css/newsletter/ios.less
+++ b/media/css/newsletter/ios.less
@@ -12,7 +12,7 @@
 #newsletter-form {
     width: (@gridColumnWidth * 8) + (@gridGutterWidth * 7);
 
-    h3 {
+    .form-title {
         float: none;
         margin: 0 auto @baseLine auto;
         width: auto;
@@ -114,7 +114,7 @@
     #newsletter-form {
         width: auto;
 
-        h3 {
+        .form-title {
             margin: 0 10px @baseLine 10px;
             text-align: center;
             width: auto;
