--- a/bedrock/press/templates/press/press-inquiry.html
+++ b/bedrock/press/templates/press/press-inquiry.html
@@ -51,6 +51,14 @@
           </div>
 
           <div class="field required">
+            <label for="id_user_email">{{ _('Email Address') }}</label>
+            {% if form.user_email.errors %}
+              <p class="error-msg">{{_('Please enter a valid email address.')}}</p>
+            {% endif %}
+            {{ form.user_email }}
+          </div>
+
+          <div class="field required">
             <label for="id_media_org">{{ _('Media Organization') }}</label>
             {% if form.media_org.errors %}
               <p class="error-msg">{{_('Please enter the name of your media organization.')}}</p>
