--- a/bedrock/firefox/templates/firefox/win10_variants/variant-2-3.html
+++ b/bedrock/firefox/templates/firefox/win10_variants/variant-2-3.html
@@ -6,22 +6,20 @@
 
 {% block page_title %}Firefox works great with Windows 10{% endblock %}
 
+{% block body_id %}win10-welcome-v2-3{% endblock %}
+
 {% block page_css %}
   {% stylesheet 'firefox_win10_welcome_variants' %}
 {% endblock %}
 
-{% block body_id %}win10-welcome-v2{% endblock %}
-
-{% block main_header %}
-  <header class="main-header">
-    <h1>{{ self.page_title() }}</h1>
-  </header>
-{% endblock %}
-
 {% block default_cta %}
   <section class="firefox-default-cta hidden">
-    <button id="set-default" type="button" class="button-flat-dark">Make Firefox your default browser</button>
-    <h2>Click the button above, then scroll down to “Web Browser” and choose Firefox.</h2>
-    <img src="{{ static('img/firefox/whatsnew_40/win10-high-res.png') }}" alt="">
+    <button id="set-default" type="button" class="button-flat-dark">Let’s do it</button>
+    <h2>Make Firefox your default in 3 easy steps:</h2>
+    <ol>
+      <li>Click the button above</li>
+      <li>Scroll down to “Web browser”</li>
+      <li>Choose Firefox</li>
+    </ol>
   </section>
 {% endblock %}
