--- a/bedrock/firefox/templates/firefox/win10_variants/variant-2-4.html
+++ b/bedrock/firefox/templates/firefox/win10_variants/variant-2-4.html
@@ -4,11 +4,23 @@
 
 {% extends "firefox/win10-welcome.html" %}
 
+{% block body_id %}win10-welcome-v2-4{% endblock %}
+
 {% block page_css %}
   {% stylesheet 'firefox_win10_welcome_variants' %}
 {% endblock %}
 
-{% block body_id %}win10-welcome-v1{% endblock %}
+{% block main_header %}
+  <header class="main-header">
+    <h1 class="not-default">Make Firefox your Default browser now</h1>
+    <h1 class="default">{{ self.page_title() }}</h1>
+    <p class="tagline">
+      {{ _('We’ve designed Firefox to work seamlessly with your Windows 10 update, giving
+      you the same great browsing experience you’ve come to love, with the privacy, speed
+      and choice you’ve come to expect.') }}
+    </p>
+  </header>
+{% endblock %}
 
 {% block default_cta %}
   <section class="firefox-default-cta hidden">
