--- a/media/css/firefox/win10-welcome-variants.less
+++ b/media/css/firefox/win10-welcome-variants.less
@@ -1,183 +1,33 @@
-@import "../sandstone/lib.less";
+@import '../sandstone/lib.less';
 
-#win10-welcome-v2 {
-    .firefox-default-cta {
-        width: auto;
-        margin: @baseLine auto;
-        padding: 0;
-        text-align: center;
-
-        button {
-            margin: @baseLine auto (@baseLine * 2);
-        }
-
-        h2 {
-            line-height: 1.3;
-        }
-
-        &:before {
-            content: none;
-        }
-
-        img {
-            margin-top: @baseLine;
-        }
-    }
-
-    @media only screen and (max-width: @breakDesktop) {
-        .main-header h1 {
-            max-width: 12em;
-            margin: 0 auto 12px;
-        }
-    }
+// tagline hidden for 3 of 4 test variants (with js enabled)
+.js #win10-welcome-v2-2 .firefox-not-default .tagline,
+.js #win10-welcome-v2-3 .firefox-not-default .tagline,
+.js #win10-welcome-v2-4 .firefox-not-default .tagline {
+    display: none;
 }
 
-#win10-welcome-v3 {
-
-    main {
-        h1.not-default,
-        h1.default {
-            display: none;
-        }
-
-        .tagline {
-            max-width: none;
-        }
-
-        &.firefox-not-default {
-            h1.not-default {
-                display: block;
-            }
-        }
-
-        &.firefox-default {
-            h1.default {
-                display: block;
-            }
-        }
-    }
-
-    .firefox-default-cta {
-        width: auto;
-        margin: @baseLine auto;
-        padding: 0;
-        text-align: center;
-
-        &:before {
-            content: none;
-        }
-
-        h2 {
-            line-height: 1.3;
-        }
-
-        button {
-            margin: @baseLine auto (@baseLine * 2);
-            padding: 12px (@baseLine * 4);
-        }
-
-        img {
-            margin-bottom: @baseLine;
-        }
-    }
-
-    @media only screen and (max-width: @breakDesktop) {
-        .main-header h1 {
-            max-width: 12em;
-            margin: 0 auto 12px;
-        }
-
-        main .tagline {
-            max-width: 30em;
-        }
-    }
+#win10-welcome-v2-4 h1.not-default {
+    display: none;
 }
 
-.no-js #win10-welcome-v3 {
-    main h1.default {
+.js #win10-welcome-v2-4 main {
+    h1 {
+        display: none;
+    }
+
+    &.firefox-not-default h1.not-default {
+        display: block;
+    }
+
+    &.firefox-default h1.default {
         display: block;
     }
 }
 
-#win10-welcome-v4,
-#win10-welcome-v5 {
-
-    main .tagline {
-        max-width: none;
-    }
-
-    .firefox-default-cta {
-        width: auto;
-        margin: @baseLine auto;
-        padding: 0;
-        text-align: center;
-
-        button {
-            position: relative;
-            margin: @baseLine auto (@baseLine * 2);
-
-            &:after {
-                position: absolute;
-                top: @baseLine;
-                right: -90px;
-                width: 72px;
-                height: 54px;
-                content: '';
-                background: url(/media/img/firefox/whatsnew_40/arrow.png) top left no-repeat;
-            }
-        }
-
-        h2 {
-            line-height: 1.3;
-        }
-
-        &:before {
-            content: none;
-        }
-
-        figure {
-            position: relative;
-
-            img {
-                margin: 0 auto;
-            }
-
-            figcaption {
-                display: block;
-                position: absolute;
-                bottom: 500px;
-                right: -40px;
-                width: 200px;
-                margin: 0;
-                color: #fff;
-                font-style: italic;
-            }
-        }
-    }
-
-    @media only screen and (max-width: 1100px) {
-        .firefox-default-cta {
-
-            button:after {
-                content: none;
-            }
-
-            figure figcaption {
-                position: static;
-                width: auto;
-                margin-bottom: @baseLine;
-            }
-        }
-    }
-
-    @media only screen and (max-width: @breakDesktop) {
-        .main-header h1 {
-            max-width: 12em;
-            margin: 0 auto 12px;
-        }
-
-        main .tagline {
-            max-width: 30em;
-        }
+@media only screen and (max-width: @breakDesktop) {
+    .main-header h1 {
+        max-width: 12em;
+        margin: 0 auto 12px;
     }
 }
