Fix Bug 1215643 - Adjust schema.org software applications markup on /firefox/new/ and also add to homepage

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -410,6 +410,8 @@
   <button id="scroll-prompt">{{ _('Discover more') }}</button>
 </main>
 
+{% include 'firefox/includes/schemaorg-app.html' %}
+
 {% endblock %}
 
 {% block email_form %}{% endblock %}
