--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -439,7 +439,7 @@
   <section class="module" id="newsletter-signup">
     <div class="container">
       {% if LANG == 'en-US' %}
-        {{ mozorg_newsletter_form() }}
+        {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Get Mozilla updates')) }}
       {% else %}
         {{ email_newsletter_form() }}
       {% endif %}
