--- a/bedrock/teach/templates/teach/smarton/base.html
+++ b/bedrock/teach/templates/teach/smarton/base.html
@@ -46,7 +46,7 @@
   <div class="footer-cta" id="footer-cta">
     <div id="smarton-foot-newsletter" class="foot-newsletter content" data-footer-name="Newsletter signup">
       {% if LANG.startswith('en') %}
-        {{ mozorg_newsletter_form(title=_('Stay in control'), subtitle=_('Get tips and more from Mozilla')) }}
+        {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Stay in control'), subtitle=_('Get tips and more from Mozilla')) }}
       {% else %}
         {{ email_newsletter_form() }}
       {% endif %}
