--- a/bedrock/mozorg/templates/mozorg/contribute/contribute-embed.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/contribute-embed.html
@@ -5,7 +5,7 @@
 {% add_lang_files "mozorg/contribute" "mozorg/contribute-form" %}
 {# Note the "windows" class, without javascript platform-specific
      assets default to windows #}
-<html class="windows x86 no-js" lang="{{ LANG }}" dir="{{ DIR }}" data-latest-firefox="{{ latest_firefox_version }}" data-esr-versions="{{ esr_firefox_versions }}">
+<html class="windows x86 no-js" lang="{{ LANG }}" dir="{{ DIR }}" data-latest-firefox="{{ latest_firefox_version }}" data-esr-versions="{{ esr_firefox_versions|safe }}">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
